MainPageStyle.css
/* ... */
.quick-facts .number{
    font-size: 22pt;
    left: 50%;
    top: 12px;
}

.quick-facts .spec{
    font-size: 9pt;
    bottom: 13px;
}

.time-frame{
    background-color: #2E4D3E;
}

.team{
    background-color: #477665;
}

.context{
    background-color: #528889;
}

.engine{
    background-color: #80A3B2;
}
/* #endregion */

/* #region Personal Contribution */

h4{
    font-weight: 500;
    font-size: 16pt;
}

.percentage-bar{
    height: 12px;
    border-radius: 6px;
    overflow: hidden;
    display: flex;
    justify-content: stretch;
    margin-top: calc(var(--defaultMargin) * .5);
}

.programming-bar{
    background-color: #4D707F;
}

.visual-bar{
    background-color: #BF8340;
}

.gamedesign-bar{
    background-color: #71283E;
}

/* #region Per Project Percentages */

.programming-bar#Seashaken {
    flex-basis: 70%;
}

.visual-bar#Seashaken {
    flex-basis: 20%;
}

.gamedesign-bar#Seashaken {
    flex-basis: 10%;
}

/* #endregion */

.percentage-stats{
    margin-top: calc(var(--defaultMargin) * .5);
    display: flex;
    justify-content: space-between;
    pointer-events: none;
}

.percentage-stats .fact{
    width: 90px;
    height: 48px;
    border-radius: 5px;
    position: relative;
}

.percentage-stats img{
    width: 40px;
    height:40px;
    left:12px;
    top:12px;
}

.percentage-stats .number{
    font-size: 14pt;
    left: 60%;
    bottom: 20px;
}

.percentage-stats .spec{
    font-size: 6.5pt;
    bottom: 6px;
}

.programming{
    background-color: #4D707F;
}

.visual-design{
    background-color: #BF8340;
}

.game-design{
    background-color: #71283E;
}

/* #endregion */

/* #region Image Slide */
.slide-parent{
    --h: 230px;
    position: relative;
    height: var(--h);
    margin-bottom: var(--defaultMargin);
}

.slide-bg-right{
    background-color: var(--bgColorTop);
    position: absolute;
    left:0;
    top:0;
    overflow-x: auto;
    width: 100%;
    height: 100%;
    z-index: -5;
}

.slide-parent .arrow{
    width: 30px;
    height: 30px;
    border-radius: 0;
    border-style: none;
    background-color: inherit;
    transform: translateY(-50%);
    
    animation-duration: .7s;
    animation-direction: alternate;
    animation-timing-function: ease-in-out;
    animation-iteration-count: infinite;
}

.slide-parent .arrow.right{
    opacity: var(--rightImageArrowOpacity);
    animation-name: right-arrow;
    left: auto;
}

.slide-parent .arrow.left{
    opacity: var(--leftImageArrowOpacity);
    animation-name: left-arrow;
    right: auto;
}

.slide-parent .arrow.left:hover, .slide-parent .arrow.right:hover{
    background-color: inherit;
    /* transition: .2s ease; */
    transform: inherit;
}

.slide-parent .arrow.right{
    transform: inherit;
}

.slide-parent .arrow.left{
    transform: inherit;
}

.slide-parent .arrow.left:active, .slide-parent .arrow.right:active{
    background-color: inherit;
    border-color:inherit;
}

@keyframes right-arrow{
    from{
        right: var(--imageArrowMarginMin);
    }

    to{
        right: var(--imageArrowMarginMax);
    }
}

@keyframes left-arrow{
    from{
        left: var(--imageArrowMarginMin);
    }

    to{
        left: var(--imageArrowMarginMax);
    }
}

.image-slide{
    height: var(--h);
    position: relative;
    display: inline-block;
    max-width: 100%;
    min-width: 100%;
    box-sizing: border-box;
    overflow-x: auto;
    overflow-y: hidden;

    scroll-behavior: smooth;
    -webkit-overflow-scrolling: touch;
    scrollbar-width: none;
}

.image-slide::-webkit-scrollbar {
  display: none;
}


.slide-bg-gradient{
    position: absolute;
    top: 0;
    height: 100%;
    aspect-ratio: 1 / 1;
    left: 50vw;
    transform: translateX(-50%);
    background-color: var(--bgColorTop);
    z-index: -1;

    -webkit-mask-image: url("ref/Gradients/Dotted.webp");
    mask-image: url(ref/Gradients/Dotted.webp);
    
    -webkit-mask-mode: alpha;
    mask-mode: alpha;

    -webkit-mask-position: left top;
    mask-position: left top;

    -webkit-mask-size: auto 100%;
    mask-size: auto 100%;
}

.slide-bg-left{
    background-color: var(--bgColorMid);
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: calc(50vw + var(--h) / 2 - 1px);
    z-index: -2;
}

.project-images{
    --imgMargin: 25px;
    margin: var(--imgMargin) var(--imgMargin);
    height: calc(100% - var(--imgMargin) * 2);
    display: flex;
    align-items: center;
    gap: calc(var(--imgMargin) * .5);
    width: max-content;
    white-space: nowrap;
}

.project-images img{
    height: 100%;
    width: auto;
    flex-shrink: 0;
    display: block;
}


/* #endregion */

/* #region Info Text  */

.main-panel.second{
    text-align: left;
    --infoTextMargin: calc(var(--defaultMargin) * .4);
}

.main-panel ul{
    margin-bottom: var(--infoTextMargin);
    padding-left: 18px;
}

.second h4{
    margin-bottom: calc(var(--defaultMargin) * .15);
}

.second p{
    margin-bottom: calc(var(--defaultMargin) * .125);
}

#larger-margin{
    margin-bottom: var(--infoTextMargin);;
}

.subheader{
    font-weight: 500;
    font-style: italic;
}

.socials-wrapper{
    height: 80px;
    width: 100vw;
    --mainPanelLeftMargin: calc((100vw - var(--mainPanelWidth)) * -0.5);
    margin-left: var(--mainPanelLeftMargin);
    background-color: var(--bgColorMid);
    margin-bottom: var(--infoTextMargin);
}

.socials{
    height: 100%;
    width: var(--mainPanelWidth);
    margin-left: calc(var(--mainPanelLeftMargin) * -1);
    display: flex;
    justify-content: space-around;
    align-content: space-between;
    position:relative;
}

.socials a{
    transition: .2s;
    height: 100%;
    aspect-ratio: 1 / 1;
    filter: drop-shadow(0 5px 1px rgb(0 0 0 / var(--cardShadowOpacity)));
}

.socials a:hover{
    cursor: pointer;
    transition: .2s;
    transform: translateY(-5px);
    filter: drop-shadow(0 10px 2px rgb(0 0 0 / var(--cardShadowOpacity)));
}
/* ... */

